--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: ruby
 rvm:
-  - 2.1.0
-  - 2.2.0
-  - 2.3.0
+  - 2.2.5
+  - 2.3.1
   - ruby-head
 
 before_install: gem install bundler -v 1.10.6
@@ -11,3 +10,4 @@ gemfile:
   - gemfiles/4.0.gemfile
   - gemfiles/4.1.gemfile
   - gemfiles/4.2.gemfile
+  - gemfiles/5.0.gemfile
