--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
 rvm:
+  - 1.9.3
   - 2.2.5
   - 2.3.1
   - ruby-head
@@ -11,3 +12,12 @@ gemfile:
   - gemfiles/rails_4.1.gemfile
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
+
+matrix:
+  exclude:
+  - rvm: 1.9.3
+    gemfile: gemfiles/rails_4.1.gemfile
+  - rvm: 1.9.3
+    gemfile: gemfiles/rails_4.2.gemfile
+  - rvm: 1.9.3
+    gemfile: gemfiles/rails_5.0.gemfile
