--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - cd spec/dummy_app
   - bundle exec rake db:create db:migrate
   - cd ../../
-  - curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | SOLR_VERSION=3.6.1 SOLR_CONFS="schema.xml solrconfig.xml" SOLR_DOCS=custom_docs.json bash
+  - curl -sSL https://raw.githubusercontent.com/bragboy/supercache/development/travis-solr.sh | SOLR_VERSION=5.3.1  SOLR_COLLECTION=test SOLR_COLLECTION_CONF=/home/travis/build/bragboy/supercache/spec/dummy_app/solr/configsets/sunspot/conf bash
 
 
 cache: bundler
