--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - cd spec/dummy_app
   - bundle exec rake db:create db:migrate
   - cd ../../
-  - curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | SOLR_VERSION=5.3.1  SOLR_COLLECTION=test SOLR_COLLECTION_CONF=/home/travis/build/bragboy/supercache/spec/support bash
+  - curl -sSL https://raw.githubusercontent.com/moliware/travis-solr/master/travis-solr.sh | SOLR_VERSION=5.3.1  SOLR_COLLECTION=test SOLR_COLLECTION_CONF=/home/travis/build/bragboy/supercache/spec/support/solr bash
 
 cache: bundler
 
@@ -29,3 +29,6 @@ matrix:
     gemfile: gemfiles/rails_4.2.gemfile
   - rvm: 1.9.3
     gemfile: gemfiles/rails_5.0.gemfile
+
+  allow_failures:
+  - rvm: ruby-head
